clarify scalar feature types

--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -28,6 +28,9 @@ class Book:
 
 ```
 
+In addition to the primitive Python types (`int`, `float`, `str`, `bool`), Chalk also supports
+`date`, `datetime`, and the Chalk [`FeatureTime`](https://docs.chalk.ai/docs/time#feature-time) as
+scalar feature types. 
 
 ---
 
