--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -118,6 +118,8 @@ infrastructure in your cloud account:
                 "iam:CreateOpenIDConnectProvider",
                 "iam:CreateInstanceProfile",
                 "iam:AttachRolePolicy",
+                "iam:TagPolicy",
+                "iam:TagRole",
                 "iam:AddRoleToInstanceProfile",
                 "iam:AddClientIDToOpenIDConnectProvider",
                 "iam:ListInstanceProfilesForRole",
