--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -120,6 +120,7 @@ infrastructure in your cloud account:
                 "iam:AttachRolePolicy",
                 "iam:TagPolicy",
                 "iam:TagRole",
+                "iam:TagOpenIDConnectProvider",
                 "iam:AddRoleToInstanceProfile",
                 "iam:AddClientIDToOpenIDConnectProvider",
                 "iam:ListInstanceProfilesForRole",
