docs: clarify using mataggs for on-the-fly txn aggs

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -12,7 +12,8 @@ to track the largest purchase amount a cardholder has made in the past 30 days.
 
 ---
 
-Note: Chalk has first-class support for [materializing aggregations, see the docs!](/docs/materialized_aggregations)
+For performant aggregations over large volumes of data, such as calculating real-time aggregations over user transactions,
+Chalk has first-class support for [materialized windowed aggregations](/docs/materialized_aggregations).
 
 ## Set up a data aggregation using windowed features
 
