fix: Link to image

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -28,7 +28,7 @@ class Document:
 
 Chalk's Data Explorer now displays the source of each feature e.g. "Live Resolver"
 
-![Sources in Chalk Data Explorer](/img/)
+![Sources in Chalk Data Explorer](/img/changelog-25_03_25-data_explorer.png)
 
 ---
 
