Add Missing Iam (#337)
* fixed

* missing perms

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -119,6 +119,9 @@ infrastructure in your cloud account:
                 "iam:CreateOpenIDConnectProvider",
                 "iam:CreateInstanceProfile",
                 "iam:AttachRolePolicy",
+                "iam:TagPolicy",
+                "iam:TagRole",
+                "iam:TagOpenIDConnectProvider",
                 "iam:AddRoleToInstanceProfile",
                 "iam:AddClientIDToOpenIDConnectProvider",
                 "iam:ListInstanceProfilesForRole",
