--- a/online-authentication.mdx
+++ b/online-authentication.mdx
@@ -12,8 +12,8 @@ import { RequestUrl } from '@/components/RequestUrl'
 
 ---
 
-Chalk implements OAuth for authentication to the online query interface. There are two kinds of credentials that
-can be used to access Chalk resources:
+Chalk implements OAuth for authentication to the online query interface.
+Two kinds of credentials can be used to access Chalk resources:
 
 - **Personal Credentials:** Full access to all resources on your account. This allows a client to act as you.
 - **Service Credentials:** Access scoped to a specific project and environment. Used for computers to talk to Chalk. Generated via the web dashboard.
