Fix import refrences

--- a/cookbook-snowflake-serving.mdx
+++ b/cookbook-snowflake-serving.mdx
@@ -72,7 +72,7 @@ or you can trigger the resolver via the web interface with the "Run" button.
 Now, we can query the data from Python. To do this, we'll instantiate a `ChalkClient` and run a `query`:
 
 ```python
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient()
 
