--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -141,7 +141,7 @@ To use the `resolver_replay` functionality:
 Example:
 
 ```python
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 ChalkClient().offline_query(
     input={User.id: [1]},
