--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -44,7 +44,7 @@ Select `Python 3.10` as the image under **Environment > Compute Profile**.
 The Chalk client can then be initialized referencing the variables directly.
 
 ```python notebook.ipynb
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient(
   client_id=CHALK_CLIENT_ID,
@@ -65,7 +65,7 @@ You can then initialize Chalk by running the following code in a cell:
 
 ```python notebook.ipynb
 import os
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient()
 ```
