--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -66,7 +66,7 @@ Now we can start building some new features!
 To load your Chalk features into your notebook, you'll want to run:
 
 ```python notebook.ipynb
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient()
 
