--- a/online-authentication.mdx
+++ b/online-authentication.mdx
@@ -27,7 +27,7 @@ Then, you will receive a `client_id` and `client_secret`. Once generated, `clien
 `client_secret` can be rotated if your security practices require this or if you suspect that `client_secret` has
 been compromised.
 
-Once you have generated your `client_id` and `client_secret`, you can proceed to make authenticated requests to Chalk.
+Once you have generated your `client_id` and `client_secret`, you can make authenticated requests to Chalk.
 
 ## Authenticating an API client
 
