permissions update for GCP

--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -221,6 +221,7 @@ compute.networks.list
 compute.networks.removePeering
 compute.networks.switchToCustomMode
 compute.networks.update
+compute.networks.updatePeering
 compute.networks.updatePolicy
 compute.networks.use
 compute.projects.get
@@ -855,6 +856,10 @@ secretmanager.versions.disable
 secretmanager.versions.enable
 secretmanager.versions.get
 secretmanager.versions.list
+servicenetworking.services.get
+servicenetworking.operations.get
+servicenetworking.services.deleteConnection
+servicenetworking.services.addPeering
 serviceusage.quotas.get
 serviceusage.services.enable
 serviceusage.services.get
