add setLabels for gloabal addresses in GCP

--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -138,6 +138,7 @@ compute.globalAddresses.create
 compute.globalAddresses.createInternal
 compute.globalAddresses.get
 compute.globalAddresses.list
+compute.globalAddresses.setLabels
 compute.globalForwardingRules.get
 compute.globalForwardingRules.list
 compute.globalNetworkEndpointGroups.attachNetworkEndpoints
