--- a/sql-resolvers.mdx
+++ b/sql-resolvers.mdx
@@ -75,8 +75,7 @@ function. For SQL file resolvers, these parameters are specified in the comments
 -- environment: 'production' <-- the environment in which the resolver should run
 --total: True <-- whether this resolver returns all ID's of a given namespace.
 
-
-select id, name, age, hobbies, updated_at from users;
+select id, name, age, hobbies, updated_at from users
 ```
 
 For the full list of configurations, see [here](/docs/sql#configuration).
