--- a/features.mdx
+++ b/features.mdx
@@ -67,8 +67,8 @@ losing the past history of this feature.
 ## Primary keys
 
 Feature sets must all have a primary key.
-This primary key is used to associate features you later resolve
-with this namespace. Your primary key can have any type,
+This primary key is used to index storage for features you later resolve
+in this feature class. Your primary key can have type `int` or `str`,
 given by the type annotation on the field.
 
 By default, if you have a feature with the name `id`,
