--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -719,6 +719,7 @@ iam.serviceAccounts.delete
 iam.serviceAccounts.disable
 iam.serviceAccounts.enable
 iam.serviceAccounts.get
+iam.serviceAccounts.getAccessToken
 iam.serviceAccounts.getIamPolicy
 iam.serviceAccounts.list
 iam.serviceAccounts.setIamPolicy
